--- a/src/components/Work/style.css
+++ b/src/components/Work/style.css
@@ -1,3 +1,3 @@
 .project-col {
-  display: flex;
+  width: 100%;
 }
