--- a/src/pages/Portfolio/style.css
+++ b/src/pages/Portfolio/style.css
@@ -18,7 +18,7 @@
 }
 
 #main-col {
-  padding: 0 7.5% 100px 7.5%;
+  padding: 0 5% 100px 5%;
 }
 
 #nav-col {
